--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <button onmouseover="alert('happy')">Hurry</button>
     <button class="name" onclick="myFunction()">Here you go</button>
     <p id="birthdayText"></p>
+    <p> Wha's up man </p>
 </body>
 
 <script>
